--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,7 +40,7 @@
             {%- include header.html -%}
             {%- include feed.html -%}
 
-            {%- if page.content-type == "notes" 
+            {%- if page.content-type == "resources" 
                 or page.content-type == "post" 
                 or page.content-type == "eg" -%}
             <main>
