--- a/_includes/content.html
+++ b/_includes/content.html
@@ -24,11 +24,11 @@
             {%- assign sidenote = itemparts[0] | split:sidenote_delimiter -%}
             
             {%- if external_link[1] == nil -%}
-                {%- assign result_notes = site.notes | where: 'title',itemparts[0] -%}
+                {%- assign result_resources = site.resources | where: 'title',itemparts[0] -%}
                 {%- assign result_posts = site.posts | where: 'title',itemparts[0] -%}
                 {%- assign result_pages = site.pages | where: 'title',itemparts[0] -%}
                 {%- assign internal_links = internal_links | append: link_joiner_delimiter | append: internal_link -%}
-                {%- assign internal_urls = internal_urls | append: link_joiner_delimiter | append: result_notes[0].url | append: result_posts[0].url | append: result_pages[0].url -%}
+                {%- assign internal_urls = internal_urls | append: link_joiner_delimiter | append: result_resources[0].url | append: result_posts[0].url | append: result_pages[0].url -%}
             {%- else -%}
                 {%- assign external_links = external_links | append: link_joiner_delimiter | append: external_link[0] -%}
                 {%- assign external_urls = external_urls | append: link_joiner_delimiter | append: external_link[1] -%}
@@ -51,7 +51,7 @@
         {%- elsif url == empty -%}
             {%- assign link_text = '<a style="background-color:#ffffc4;" href="' | append: 'javascript:void(0)' | append: '">' | append: title | append: '</a>' -%}
         {%- else -%}
-            {%- assign post = site.notes | where: 'title',title -%}
+            {%- assign post = site.resources | where: 'title',title -%}
             {%- if post[0].title == nil -%}
             {%- assign post = site.posts | where: 'title',title -%}
             {%- endif -%}
@@ -104,7 +104,7 @@
 
 
             {%- if url contains "transclude" -%}
-                {%- assign post = site.notes | where: 'title',title -%}
+                {%- assign post = site.resources | where: 'title',title -%}
                 {%- if post[0].title == nil -%}
                 {%- assign post = site.posts | where: 'title',title -%}
                 {%- endif -%}
