--- a/_includes/contextmenu.html
+++ b/_includes/contextmenu.html
@@ -1,4 +1,4 @@
-{%- if page.permalink == "/" or page.permalink == "/notes" -%}
+{%- if page.permalink == "/" or page.permalink == "/resources" -%}
 <nav class="context-menu" id="context-menu">
     <ul class="context-menu__items">
       <li class="context-menu__item">
