--- a/_includes/backlinks.html
+++ b/_includes/backlinks.html
@@ -1,7 +1,7 @@
 <!-- Add backlinks to the current page --> 
 {%- assign link_count = 0 -%}
 {%- assign wiki_link_title = '[' | append: page.title | append: ']' -%}
-{%- for note in site.resources -%}
+{%- for note in site.notes -%}
         {%- if note.url != page.url -%}
             {%- if note.content contains wiki_link_title -%}
                 {%- assign link_count = link_count | plus:1 -%}
@@ -27,7 +27,7 @@
 <div class="related" id="jekyll-seamless-backlinks">
     <h4 class="medium-small">Linked References</h4>
     <div class="related-wrapper">
-        {%- for note in site.resources -%}
+        {%- for note in site.notes -%}
         {%- if note.url != page.url -%}
             {%- if note.content contains wiki_link_title -%}
             <div class="related-group"><a href="{{note.url}}">
