--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,12 +25,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
 
     <link rel="icon" href="{{site.favicon}}" type="image/png" sizes="16x16"/>
-    <link href="/assets/css/style.css" rel="stylesheet" media="all" class="default"/>
-
-    <!--[if IE]>
-        <link href="/assets/css/ie-target.css" rel="stylesheet" type="text/css"/>
-    <![endif]-->
-    <!--<link href="/assets/css/prism.css" rel="stylesheet" />-->
+    <link href="/assets/css/styles.css" rel="stylesheet" media="all"/>
     <link rel="alternate" type="application/rss+xml" href="{{ site.url }}/feed.xml">
 </head>
 
@@ -40,8 +35,7 @@
             {%- include header.html -%}
             {%- include feed.html -%}
 
-            {%- if page.content-type == "resources" 
-                or page.content-type == "post" 
+            {%- if page.content-type == "post" 
                 or page.content-type == "eg" -%}
             <main>
                 <h1>{{page.title}}</h1>
@@ -50,7 +44,6 @@
                 {%- include related.html -%}
             </main>
             {%- endif -%}
-            {%- include comments.html -%}
             {%- include footer.html -%}
         </div>
         <button class="scroll-to-top" id="scroll-to-top"><i class="fa fa-chevron-up"></i></button>
