--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,64 +1,27 @@
 ---
 ---
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <meta content="Knowledge Continuum" property="og:site_name"/>
-    <meta content="A non-linear thread of important ideas weaved together to explore and understand the fabric of knowledge." property="og:description">
-    <meta content="{{ site.url }}/about/" property="article:author">
+{%- include header.html -%}
 
-    {%- if page.title -%}
-    <meta content="{{ page.title }}" property="og:title">
-    <meta content="article" property="og:type">
-    <meta content="{{ site.url }}{{ page.url }}" property="og:url">
-    {%- else -%}
-    <meta content="website" property="og:type">
-    <meta content="{{ site.url }}{{ page.url }}" property="og:url">
-    {%- endif -%}
+<h3>{{ page.title }}</h3>
+<p>{{ content }} </p>
+<p><strong>Tags:</strong> {% for tag in page.tags %}"{{ tag }}"{% unless forloop.last %},{% endunless %}{% endfor %}</p>
+{%- if page.csv_url != '' -%}   <p><a href="{{ page.csv_url }}">&#8614; CSV Download</a></p>{% endif %}
+{%- if page.json_url != '' -%}<p><a href="{{ page.json_url }}">&#8614; JSON Download</a></p>{% endif %}
+<hr>
+<table style="width: 100%;">
+    <tr>
+        <td style="text-align: left;">
+            {% if page.previous.url %}
+            <a class="prev" href="{{page.previous.url}}">&#8592; Previous</a>
+            {% endif %}
+        </td>
+        <td style="text-align: right;">
+            {% if page.next.url %}
+            <a class="next" href="{{page.next.url}}">Next &#8594;</a>
+            {% endif %}
+        </td>
+    </tr>
+</table>            
 
-    <title>{{site.title}}</title>
-
-    <link rel="canonical" href="{{site.url}}{{page.url}}"/>
-    <link rel="apple-touch-icon" href="{{site.profile_pic}}">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
-
-    <link rel="icon" href="{{site.favicon}}" type="image/png" sizes="16x16"/>
-    <link href="/assets/css/styles.css" rel="stylesheet" media="all"/>
-    <link rel="alternate" type="application/rss+xml" href="{{ site.url }}/feed.xml">
-</head>
-
-<body>
-    <div class="container">                    
-        <div class = "box">
-            
-            {%- include header.html -%}
-            
-            <h3>{{ page.title }}</h3>
-            <p>{{ content }} </p>
-
-            <hr>
-
-            <table style="width: 100%;">
-                <tr>
-                    <td style="text-align: left;">
-                        {% if page.previous.url %}
-                        <a class="prev" href="{{page.previous.url}}">&#8592; Previous</a>
-                        {% endif %}
-                    </td>
-                    <td style="text-align: right;">
-                        {% if page.next.url %}
-                        <a class="next" href="{{page.next.url}}">Next &#8594;</a>
-                        {% endif %}
-                    </td>
-                </tr>
-            </table>            
-      
-            {%- include footer.html -%}
-            
-        </div>
-
-    </div>
-</body>
-</html>
+{%- include footer.html -%}
