--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,18 @@
 {%- if page.csv_url != '' -%}   <p><a href="{{ page.csv_url }}">&#8614; CSV Download</a></p>{% endif %}
 {%- if page.json_url != '' -%}<p><a href="{{ page.json_url }}">&#8614; JSON Download</a></p>{% endif %}
 <hr>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Dayda Horizontal -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-0202072258759210"
+     data-ad-slot="1512400134"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+<hr>
 <table style="width: 100%;">
     <tr>
         <td style="text-align: left;">
