--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,8 +6,10 @@
 <h3>{{ page.title }}</h3>
 <p>{{ content }} </p>
 <p><strong>Tags:</strong> {% for tag in page.tags %}{{ tag }}{% unless forloop.last %},{% endunless %}{% endfor %}</p>
+<center>
 {%- if page.csv_url != '' -%}   <p><a href="{{ page.csv_url }}">&#8614; CSV Download</a></p>{% endif %}
 {%- if page.json_url != '' -%}<p><a href="{{ page.json_url }}">&#8614; JSON Download</a></p>{% endif %}
+</center>
 <hr>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Dayda Horizontal -->
